--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
-numpy
-tensorflow>=0.12
-matplotlib
-sklearn
-enum
-scipy
+appdirs==1.4.2
+cycler==0.10.0
+dill==0.2.6
+enum34==1.1.6
+funcsigs==1.0.2
+functools32==3.2.3.post2
+matplotlib==2.0.0
+mock==2.0.0
+multiprocess==0.70.5
+nltk==3.2.2
+numpy==1.12.0
+packaging==16.8
+pathos==0.2.0
+pbr==1.10.0
+pox==0.2.3
+ppft==1.6.4.7.1
+protobuf==3.1.0
+pyparsing==2.1.10
+python-dateutil==2.6.0
+pytz==2016.10
+scikit-learn==0.18.1
+scipy==0.18.1
+six==1.10.0
+subprocess32==3.2.7
+tensorflow==0.12.0
